--- a/Sources/PapcornsFeedback/Screen/Cell/FeedbackOptionCell.xib
+++ b/Sources/PapcornsFeedback/Screen/Cell/FeedbackOptionCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedbackOptionCell" rowHeight="63" id="KGk-i7-Jjw" customClass="FeedbackOptionCell" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedbackOptionCell" rowHeight="63" id="KGk-i7-Jjw" customClass="FeedbackOptionCell" customModule="PapcornsFeedback">
             <rect key="frame" x="0.0" y="0.0" width="394" height="63"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
