--- a/Sources/PapcornsFeedback/Screen/Cell/CommentTableViewCell.xib
+++ b/Sources/PapcornsFeedback/Screen/Cell/CommentTableViewCell.xib
@@ -49,7 +49,7 @@
             <connections>
                 <outlet property="commentTextView" destination="UX3-tK-Nex" id="YGB-Gq-uR8"/>
             </connections>
-            <point key="canvasLocation" x="147.32824427480915" y="71.83098591549296"/>
+            <point key="canvasLocation" x="150" y="32"/>
         </tableViewCell>
     </objects>
 </document>
