--- a/Sources/PapcornsFeedback/Screen/Cell/FeedbackOptionCell.xib
+++ b/Sources/PapcornsFeedback/Screen/Cell/FeedbackOptionCell.xib
@@ -10,24 +10,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedbackOptionCell" rowHeight="63" id="KGk-i7-Jjw" customClass="FeedbackOptionCell" customModule="PapcornsFeedback">
-            <rect key="frame" x="0.0" y="0.0" width="394" height="63"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedbackOptionCell" rowHeight="62" id="KGk-i7-Jjw" customClass="FeedbackOptionCell" customModule="PapcornsFeedback">
+            <rect key="frame" x="0.0" y="0.0" width="512" height="62"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="394" height="63"/>
+                <rect key="frame" x="0.0" y="0.0" width="512" height="62"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bek-zO-fY0">
-                        <rect key="frame" x="16" y="2" width="362" height="59"/>
+                        <rect key="frame" x="16" y="2" width="480" height="58"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bugs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NRE-Xa-aVj">
-                                <rect key="frame" x="15.999999999999996" y="19" width="38.666666666666657" height="21"/>
+                                <rect key="frame" x="15.999999999999996" y="18.666666666666668" width="38.666666666666657" height="21.000000000000004"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XLc-ax-DxS">
-                                <rect key="frame" x="324" y="18.666666666666668" width="22" height="22.000000000000004"/>
+                                <rect key="frame" x="442" y="18" width="22" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="22" id="Jik-bA-Y5Y"/>
                                     <constraint firstAttribute="height" constant="22" id="kQV-iA-7oa"/>
@@ -56,7 +56,7 @@
                 <outlet property="imgSelection" destination="XLc-ax-DxS" id="VVL-F3-t20"/>
                 <outlet property="lblTitle" destination="NRE-Xa-aVj" id="e5G-nR-INI"/>
             </connections>
-            <point key="canvasLocation" x="128.24427480916029" y="27.112676056338028"/>
+            <point key="canvasLocation" x="218.32061068702288" y="26.760563380281692"/>
         </tableViewCell>
     </objects>
 </document>
