--- a/Sources/PapcornsFeedback/Screen/Cell/CommentTableViewCell.xib
+++ b/Sources/PapcornsFeedback/Screen/Cell/CommentTableViewCell.xib
@@ -48,6 +48,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="commentTextView" destination="UX3-tK-Nex" id="YGB-Gq-uR8"/>
+                <outlet property="containerView" destination="JEQ-KK-fZb" id="bKg-2H-3Gc"/>
             </connections>
             <point key="canvasLocation" x="150" y="32"/>
         </tableViewCell>
