--- a/Sources/PapcornsFeedback/Screen/Storyboard/SendFeedback.storyboard
+++ b/Sources/PapcornsFeedback/Screen/Storyboard/SendFeedback.storyboard
@@ -30,9 +30,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EPH-tM-Owc">
-                                <rect key="frame" x="0.0" y="141" width="390" height="515"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EPH-tM-Owc">
+                                <rect key="frame" x="0.0" y="114" width="390" height="592"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RvL-qn-0EG">
@@ -54,9 +53,13 @@
                         <viewLayoutGuide key="safeArea" id="pSg-ef-KBo"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="EPH-tM-Owc" firstAttribute="trailing" secondItem="pSg-ef-KBo" secondAttribute="trailing" id="0sz-dX-9LZ"/>
                             <constraint firstItem="RKX-I8-OEA" firstAttribute="centerY" secondItem="XAV-J6-TBC" secondAttribute="centerY" id="27S-6F-QGt"/>
                             <constraint firstItem="XAV-J6-TBC" firstAttribute="leading" secondItem="pSg-ef-KBo" secondAttribute="leading" constant="16" id="4kg-tS-P4E"/>
                             <constraint firstItem="pSg-ef-KBo" firstAttribute="bottom" secondItem="RvL-qn-0EG" secondAttribute="bottom" constant="30" id="61c-sj-IRT"/>
+                            <constraint firstItem="RvL-qn-0EG" firstAttribute="top" secondItem="EPH-tM-Owc" secondAttribute="bottom" constant="10" id="KCo-dO-KHm"/>
+                            <constraint firstItem="EPH-tM-Owc" firstAttribute="top" secondItem="XAV-J6-TBC" secondAttribute="bottom" constant="10" id="ZFh-a1-Tzm"/>
+                            <constraint firstItem="EPH-tM-Owc" firstAttribute="leading" secondItem="pSg-ef-KBo" secondAttribute="leading" id="iHn-na-G89"/>
                             <constraint firstItem="RvL-qn-0EG" firstAttribute="leading" secondItem="pSg-ef-KBo" secondAttribute="leading" constant="16" id="iWz-Gw-2Jj"/>
                             <constraint firstItem="XAV-J6-TBC" firstAttribute="top" secondItem="pSg-ef-KBo" secondAttribute="top" constant="19" id="lMS-vX-zaV"/>
                             <constraint firstItem="RKX-I8-OEA" firstAttribute="centerX" secondItem="AIq-s3-qnm" secondAttribute="centerX" id="lf3-sH-XiO"/>
