--- a/Sources/PapcornsFeedback/Screen/Storyboard/SendFeedback.storyboard
+++ b/Sources/PapcornsFeedback/Screen/Storyboard/SendFeedback.storyboard
@@ -40,11 +40,10 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="OQA-uP-AdH"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <color key="tintColor" red="0.31372549019607843" green="0.3411764705882353" blue="0.4392156862745098" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Submit">
-                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="17"/>
-                                </buttonConfiguration>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="submit_Tapped:" destination="TYZ-ve-ZSe" eventType="touchUpInside" id="4cq-6s-4Q5"/>
                                 </connections>
